<resources>
    <string name="app_name">EatO</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_hint">Your Phone number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>