<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Verification.SignUpActivity">

    <View
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-50dp"
        android:layout_marginTop="-27dp"
        android:background="@drawable/outlines_circles" />

    <View
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="-120dp"
        android:background="@drawable/ellipse" />

    <View
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-120dp"
        android:layout_marginEnd="-100dp"
        android:background="@drawable/ellipse"
        android:backgroundTint="#FE724C" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/soifa_pro_semibold"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textFontWeight="600"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sofia_pro_medium"
            android:text="@string/phone_number"
            android:textColor="@color/editTextColor"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/signUpPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:elevation="0.1dp"
            android:ems="100"
            android:hint="@string/phone_number_hint"
            android:inputType="phone"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            android:textColorHint="#C4C4C4" />


        <Button
            android:id="@+id/submitSignUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1000"
            android:background="@drawable/circular_btn"
            android:elevation="5dp"
            android:fontFamily="@font/soifa_pro_semibold"
            android:paddingHorizontal="100dp"
            android:paddingVertical="15dp"
            android:shadowColor="@color/white"
            android:stateListAnimator="@null"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/login"
                android:textColor="@color/company_color"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/loginInSignUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1000"
            android:background="@drawable/outlined_btn"
            android:fontFamily="@font/soifa_pro_semibold"
            android:paddingHorizontal="100dp"
            android:paddingVertical="15dp"
            android:text="@string/login"
            android:textColor="#111719"
            android:textSize="16sp" />


    </LinearLayout>

</RelativeLayout>